feat: Update image jagaujianku

--- a/src/content/projects/01-jagaujianku-revolutionizing-exam-invigilator-schedule-management/index.mdx
+++ b/src/content/projects/01-jagaujianku-revolutionizing-exam-invigilator-schedule-management/index.mdx
@@ -21,7 +21,7 @@ As a former exam invigilator myself, I've personally experienced the frustration
 
 To address these pain points, I developed **Jagaujianku** (available at [jagaujianku.pages.dev](https://jagaujianku.pages.dev/)). This web application is designed with one main goal: to empower exam invigilators by transforming their static PDF schedules into an interactive, manageable to-do list.
 
-<Image src="https://images.unsplash.com/photo-1506784983877-459943c99205?ixlib=rb-4.0.3&q=85&fm=jpg&crop=entropy&cs=srgb&w=1000&h=563" alt="A person typing on a laptop with a digital calendar and task list on the screen, symbolizing efficient schedule management." width={1000} height={563} />
+<Image src="https://images.pexels.com/photos/7395911/pexels-photo-7395911.jpeg" alt="People Sitting in the Room." width={779} height={519} />
 
 ### How Jagaujianku Works:
 
